--- a/AtividadeBimestral/app/build.gradle
+++ b/AtividadeBimestral/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.google.code.gson:gson:2.8.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile 'com.github.satyan:sugar:1.4'
 }
